--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --tooltipbg-bg: rgba(20, 55, 0, 0.7);
     --main-color: #0ca21d;
     --med-color: #0ebe20;
-    --text-color : #aafbb5;
+    --text-color: #aafbb5;
     --disabled-main: #6ca271;
     --bg-color: #2b2d2b;
     --secondary-color: #131413;
@@ -13,6 +13,11 @@
     --selected-color: #000;
     --disabled-color: #442323;
     --darkgreen: #0d4208;
+    --lightgray: #373737;
+    --bodycolor: #0d4208;
+    --inputcolor: rgba(44,187,99,.35);
+    --contpanel-colone: #212922;
+    --contpanel-coltwo: rgba(20, 55, 0, 0.7);
 }
 
 
@@ -25,11 +30,12 @@ Main colorings
 * {
     font-family: courier;
     font-weight: 300;
+    font-size: 16px;
 }
 
 body {
     background-size: 500% 500%;
-    background-image: linear-gradient(-45deg, var(--bg-color), var(--darkgreen), var(--bg-color) 100%);
+    background-image: linear-gradient(-45deg, var(--bg-color), var(--bodycolor), var(--bg-color) 100%);
     -webkit-animation: AnimateBG 20s ease infinite;
     animation: AnimateBG 20s ease infinite;
 }
@@ -61,7 +67,7 @@ body {
 .control-panel {
     border-radius: 10px;
     padding: 10px;
-    background-image: radial-gradient(var(--fourth-color), var(--tooltipbg-bg));
+    background-image: radial-gradient(var(--contpanel-colone), var(--contpanel-coltwo));
 }
 
 label {
@@ -77,7 +83,7 @@ input, textarea {
     vertical-align: middle;
     margin: 5px 10px 5px 0;
     padding: 10px;
-    background-color: var(--btn-glow_one);
+    background-color: var(--inputcolor);
     border: 1px solid var(--selected-color);
     color: var(--text-color);
 }
@@ -86,11 +92,18 @@ textarea[readonly] {
     background-color: var(--fourth-color);
 }
 
+.length_txt {
+    color: var(--text-color);
+    font-size: 16px;
+    margin-bottom: 10px;
+    margin-top: -5px;
+}
+
 button {
     padding: 10px 20px;
     background-color: var(--main-color);
     border: 1px solid var(--bg-color);
-    color: var(---selected-color);
+    color: var(--selected-color);
     cursor: pointer;
     font-weight: 1000;
     font-size: 15px;
@@ -127,6 +140,60 @@ button.selected:enabled {
 button[disabled] {
     background-color: var(--disabled-main);
     color: var(--bg-color);
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    vertical-align: middle;
+    border: 1px solid transparent;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.switch:hover {
+    border: 1px solid var(--text-color);
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--main-color);
+    -webkit-transition: .4s;
+    -ms-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: var(--bg-color);
+    -webkit-transition: .4s;
+    -ms-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+    background-color: var(--text-color);
 }
 
 input[type="number"] {
@@ -168,6 +235,30 @@ button:focus {
     display:block;
 }
 
+table {
+    border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
+    color: var(--text-color);
+    background-color: var(--tooltipbg-bg);
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+td, th {
+    border: 1px solid var(--main-color);
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: var(--tooltipbg-bg);
+}
+
+tr:first-child {
+    background-color: var(--btn-glow_one);
+    font-size: 15px;
+}
+
 
 /*
 -------
@@ -176,7 +267,7 @@ Popup window
 */
 .infobox {
     position: fixed;
-    z-index: 20;
+    z-index: 99;
     max-width: 85%;
     width: 500px;
     top: 50%;
@@ -250,6 +341,8 @@ Popup window
 .infobox_title {
     margin: 0;
     color: var(--main-color);
+    font-weight: 1000;
+    font-size: 20px;
 }
 
 .infobox_content {
@@ -270,30 +363,228 @@ Popup window
 
 /*
 -------
+Tooltip
+-------
+*/
+.tooltip {
+    position: relative;
+    color: var(--main-color);
+    font-size: 20px;
+    font-weight: 1000;
+    border: 2px double var(--main-color);
+    width: 25px;
+    display: inline-block;
+    background: var(--tooltipbg-bg);
+    -webkit-transition: .4s;
+    -ms-transition: .4s;
+    transition: .4s;
+    vertical-align: middle;
+}
+
+.tooltip:hover {
+    background: var(--btn-glow_one);
+    box-shadow: 0 0 5px var(--main-color);
+    -webkit-transition: .4s;
+    -ms-transition: .4s;
+    transition: .4s;
+}
+
+.tooltip:before {
+    content: attr(data-text); /* here's the magic */
+    position:absolute;
+    z-index: 98;
+
+  /* vertically center */
+    top:50%;
+    transform:translateY(-50%);
+
+  /* move to right */
+    left:130%;
+    margin-left:15px; /* and add a small left margin */
+
+  /* basic styles */
+    width:200px;
+    padding:10px;
+    border: 2px double var(--main-color);
+    background: var(--tooltipbg-bg);
+    color: var(--text-color);
+    text-align:center;
+    font-size: 16px;
+
+    display:none; /* hide by default */
+}
+
+.tooltip:hover:before {
+    display:block;
+}
+
+
+/*
+-------
+Dropdown menus
+-------
+*/
+/*the container must be positioned relative:*/
+.custom-select {
+    position: relative;
+    margin: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.custom-select select {
+    display: none; /*hide original SELECT element:*/
+}
+
+.select-selected {
+    background-color: var(--bg-color);
+}
+
+/*style the arrow inside the select element:*/
+.select-selected:after {
+    position: absolute;
+    content: "";
+    top: 14px;
+    right: 10px;
+    width: 0;
+    height: 0;
+    border: 6px solid transparent;
+    border-color: var(--text-color) transparent transparent transparent;
+}
+
+/*point the arrow upwards when the select box is open (active):*/
+.select-selected.select-arrow-active:after {
+    border-color: transparent transparent var(--text-color) transparent;
+    top: 7px;
+}
+
+/*style the items (options), including the selected item:*/
+.select-items div, .select-selected {
+    color: var(--text-color);
+    padding: 8px 16px;
+    border: 1px solid transparent;
+    cursor: pointer;
+    user-select: none;
+    max-height: 250px;
+    overflow: scroll;
+    font-weight: 1000;
+    border: 2px double var(--text-color);
+    border-bottom: none;
+    border-top: none;
+}
+
+.select-items div:last-of-type {
+    border-bottom: 2px double var(--text-color);
+}
+.select-arrow-active {
+    border-color: var(--text-color) !important;
+    border-bottom: 2px double var(--main-color) !important
+}
+
+.select-selected {
+    border: 2px double var(--main-color);
+}
+
+.select-selected:hover {
+    border-color: var(--text-color);
+}
+
+/*style items (options):*/
+.select-items {
+    position: absolute;
+    background-color: var(--lightgray);
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 97;
+    max-height: 200px;
+    overflow: scroll;
+}
+
+/*hide the items when the select box is closed:*/
+.select-hide {
+    display: none;
+}
+
+.select-items div:hover, .same-as-selected {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+
+
+/*
+-------
 Main
 -------
 */
 .main {
     text-align: center;
 }
+.control-panel > div:nth-of-type(-n+0) {
+    background-color: var(--secondary-color);
+    display: inline-block;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 15px;
+    border: 2px dotted var(--main-color);
+}
 
-/*Encrypt*/
-.main > .mp {
+/*Various tabs/modes*/
+.main > div:not(:first-child) {
+    display: none;
     margin-top: 10px;
     border: 3px solid var(--selected-color);
     padding: 5px;
     background-color: var(--secondary-color);
-    display: inline-block;
     -webkit-transition: box-shadow 0.5s, border-color 0.5s;
     -ms-transition: box-shadow 0.5s, border-color 0.5s;
     transition: box-shadow 0.5s, border-color 0.5s;
-    margin-bottom: 10vh;
 }
 
-.main > .mp:hover {
+.main > div:not(:first-child):hover {
     border-color: var(--main-color);
     box-shadow: 0 0 10px var(--main-color);
     -webkit-transition: box-shadow 0.5s, border-color 0.5s;
     -ms-transition: box-shadow 0.5s, border-color 0.5s;
     transition: box-shadow 0.5s, border-color 0.5s;
+}
+
+#listedcc_table, #listedcc_label {
+    display: none;
+}
+
+.settingsp {
+    width: 91.8vw;
+    margin-bottom: 10vh;
+    padding-bottom: 80px !important;
+}
+
+.settingsp > .all_settings > div {
+    background-color: var(--secondary-color);
+    display: block;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 15px;
+    border: 2px dotted var(--main-color);
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#stylesel_div, .stylesel_emergency_toggle {
+    display: none;
+}
+
+#emergency_sr {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    padding: unset;
+    border: none;
+    box-shadow: unset !important;
+    border-radius: unset !important;
+    display: none;
+    background-color: #171817;
+    color: #aafbb5;
+    border: 2px double #0ca21d;
 }
