Improved the hue automated movemenet and made the slider look better on browsers that cant see the custom one

--- a/SubSite/style.css
+++ b/SubSite/style.css
@@ -210,6 +210,7 @@ input:checked + .toggle:before {
     background: var(--bg-color);
     display:inline-block;
     width: 20vw;
+    accent-color: var(--main-color);
 }
 
 .slider::-webkit-slider-thumb {
