added `cursor: default;` to disabled button, and a new button

--- a/SubSite/style.css
+++ b/SubSite/style.css
@@ -150,6 +150,7 @@ button.selected:enabled {
 button[disabled] {
     background-color: var(--disabled-main);
     color: var(--bg-color);
+    cursor: default;
 }
 
 .switch input {
